# bitcoin-shamir

./: LICENSE  README.md  pyproject.toml
src/: bitcoin-shamir.py  bitcoinshamir.py
src/bitcoinshamir/: BIP39_List.py  __init__.py  bitcoinshamir.py  decode.py  encode.py  enums.py  exceptions.py  lagrange.py  mnemonic.py  point.py  polynomial.py  share.py
